# FAPI-KR2

./: README.md  pyproject.toml
03/3.1/: main.py  models.py
03/3.2/: main.py
05/5.1/: main.py
05/5.2/: main.py
05/5.3/: main.py  models.py
05/5.4/: main.py
05/5.5/: main.py  models.py
